packages/app/web/css/ui.css
/* ... */
.maximize-button-label, .unmaximize-button-label {
    transition: opacity 300ms ease-in-out;
    display: inline-block;
}
body:not(.subwindow) .sidecar-full-screen sidecar .sidecar-bottom-stripe-maximize .maximize-button-label, body:not(.subwindow) tab:not(.sidecar-full-screen) sidecar .sidecar-bottom-stripe-maximize .unmaximize-button-label {
    transition: opacity 0ms ease-in-out;
    opacity: 0;
    width: 0;
    height: 0;
}
body:not(.subwindow) .sidecar-bottom-stripe-quit, body.subwindow[data-presentation="SidecarFullscreen"] .sidecar-bottom-stripe-quit {
    /* no quit button if not in subwindow/popup mode */
    display: none;
}
body.subwindow[data-presentation="SidecarFullscreenForPopups"] sidecar .sidecar-bottom-stripe-close {
    /* no close button if in subwindow/popup mode */
    display: none;
}
body.subwindow.sidecar-full-screen .sidecar-bottom-stripe-maximize:not(.screenshot-button) {
    /* in subwindow mode, no maximize or unmaximize buttons */
    display: none;
}
.sidecar-bottom-stripe .sidecar-bottom-stripe-button-return-to::first-letter, .sidecar-bottom-stripe .sidecar-bottom-stripe-button[data-mode] {
    /* for bottom mode-switching buttons, capitalize the text; for actual buttons, keep the capitalization as it was given */
    text-transform: capitalize;
}
.sidecar-bottom-stripe .sidecar-bottom-stripe-button {
    padding: 1ex 0.4375rem; /* rem important to avoid oddities when font zooming */
    border-bottom: 2px solid transparent; /* will change color on hover */
    transition: all 150ms ease-in-out, border-color 300ms ease-in-out;
}
sidecar .sidecar-header .limits {
    /* don't show limits in header for now */
    display: none;
}
.sidecar-bottom-stripe .sidecar-bottom-stripe-button:not(.sidecar-bottom-stripe-button-active):hover, .sidecar-bottom-stripe .sidecar-bottom-stripe-button.hover {
    cursor: pointer;
    opacity: 1;
}
.sidecar-bottom-stripe .sidecar-bottom-stripe-button:not(.sidecar-bottom-stripe-button-active).force-no-hover:hover, .sidecar-bottom-stripe .sidecar-bottom-stripe-button.force-no-hover.hover {
    /* e.g. the screenshot plugin wants to disallow tooltips on the
   "capture screenshot" button while capturing a screenshot! */
    color: inherit !important;
    transition: none !important;
}
.sidecar-bottom-stripe-close:hover .sidecar-bottom-stripe-close-icon, .sidecar-bottom-stripe-close.hover .sidecar-bottom-stripe-close-icon, .sidecar-bottom-stripe-button-container:hover .sidecar-bottom-stripe-close-icon {
    /* on hover, squeeze the >> a bit closer together */
    letter-spacing: -1.25ex;
}
body.os-win32 sidecar .sidecar-bottom-stripe-close:hover .sidecar-bottom-stripe-close-icon, body.os-win32 sidecar .sidecar-bottom-stripe-close.hover .sidecar-bottom-stripe-close-icon, body.os-win32 sidecar .sidecar-bottom-stripe-button-container:hover .sidecar-bottom-stripe-close-icon {
    letter-spacing: -1px; /* windows is different here */
}
sidecar .sidecar-bottom-stripe-back-bits, .sidecar-bottom-stripe .fill-container {
    /* back button in sidecar bottom stripe */
    border-right: 1px dotted hsla(240, 2%, 90%, 0.5);
    padding-right: 0.4375rem;
    margin-right: 0.4375rem;
}
sidecar .sidecar-bottom-stripe-back-bits > div {
    transition: all 150ms ease-in-out;
    display: flex;
    align-items: center;
}
sidecar .sidecar-bottom-stripe-back-bits > div:hover {
    opacity: 1;
}
sidecar .sidecar-bottom-stripe-button-container.sidecar-bottom-stripe-back-bits:not(.has-back-button) {
    display: none;
}
sidecar .sidecar-bottom-stripe-button-container.sidecar-bottom-stripe-back-bits .graphical-icon {
    font-size: 3vmin;
}

/* custom content */
body.no-sidecar-header .sidecar-header, sidecar.no-sidecar-header .sidecar-header, sidecar.custom-content .sidecar-content, sidecar:not(.custom-content) .custom-content, sidecar.custom-content .sidecar-header-secondary-content .limits, sidecar:not(.custom-content) .custom-header-content, sidecar.custom-content .sidecar-header-secondary-content .action-content {
    /* custom content rules */
    display: none;
}
sidecar .custom-content {
    display: flex;
    flex: 1;
    min-height: 0; /* without this, in firefox wskflow pushes the bottom stripe off the bottom of the viewport */
}
sidecar .sidecar-header {
    display: flex;
    border-bottom: 1px solid;
    flex-basis: 9rem;
    min-height: 9rem; /* see shell issue #712 */
}
sidecar .sidecar-header .header-main-content {
    flex: 1;
    display: flex;
    flex-direction: column;

    /* this is needed, as we rotate the "sidecar-header-icon", which confuses chrome in terms of width occupancy;
       see sidecar .sidecar-header-icon-wrapper; the 4em parts must match! */
    width: calc(100% - 4em);
}
sidecar .header-right-bits {
    white-space: nowrap;
    margin: 1rem;
}
.sidecar-header .kind {
    font-variant: small-caps;
    flex: 1;
    margin-top: 1ex;
}
.sidecar-header .action-content .kind {
    font-size: 0.875rem;
    font-variant: normal;
    font-weight: 300;
    font-family: inherit;
    margin: 0;
}
.header-right-bits .action-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: flex-end;
    justify-content: center;
}
.sidecar-header .activation-duration, .sidecar-header .kind {
    font-weight: bold;
    font-size: 2.5em;
}
sidecar .sidecar-header-text {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
sidecar .sidecar-header-icon {
    font-size: 2em;
    height: 4.5rem;
    width: 4.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
}
sidecar .sidecar-header-icon-wrapper {
    width: 4em; /* see the sidecar .sidecar-header .header-main-content calc(100% - 4em); the 4em parts must match! */
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
sidecar .header-left-bits {
    align-items: stretch;
}
/* ... */

