fix(packages/app): minor spacing glitch in sidecar header
with badges

Fixes #946

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -872,7 +872,7 @@ sidecar .header-right-bits {
     font-family: inherit;
     margin: 0;
 }
-.header-right-bits .action-content {
+.header-right-bits .action-content, .header-right-bits .custom-header-content {
     display: flex;
     flex-direction: column;
     flex: 1;
